crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_hover__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "col": 4,
    "line": 109,
    "uri": "<PATH>"
  },
  "response": {
    "col_end": 5,
    "col_start": 4,
    "line_end": 111,
    "line_start": 109,
    "markdown": "```sysml\nview def BrewSequenceView\n```\n\n`Views::BrewSequenceView`\n"
  }
}
